--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,105 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	:root{
+			/* Colors */
+			--dpm-black: hasla(300, 11%, 4%, 1);
+			--dpm-black-semi: hsla(300, 11%, 4%, 0.45);
+			--dpm-red: hsla(0, 100%, 32%, 1);
+			--accent-color: hsla(39, 96%, 69%, 1);
+			--link-color: hsla(39, 6%, 99%, 1);
+			--white: #fff;
+			--light-gray: #f5f5f5;
+			--light-grey: #f5f5f5;
+
+			--button-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+			--bs: 0px 4px 8px rgba(0, 0, 0, 0.125);
+			--spacing-xs: 1rem;
+			--spacing-sm: 2rem;
+			--spacing-md: calc(var(--spacing-sm) * 1.5);
+			--spacing-lg: calc(var(--spacing-sm) * 2);
+
+			--max-width: 1680px;
+
+			--border-radius-sm: 4px;
+			--border-radius-md: calc(var(--border-radius-sm) * 2);
+			--border-radius-lg: calc(var(--border-radius-md) * 2);
+
+			--cards-grid: repeat(auto-fill, minmax(clamp(300px, 400px, 450px), 1fr));
+			--grid-gap-sm: var(--spacing-sm);
+			--grid-gap-md: 5vh;
+			--grid-gap-lg: 10vh;
+			--grid-gap-xl: 20vh;
+			--font-size-default: 1rem;
+			--font-stack-body: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+				Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+				sans-serif;
+
+			--z-index-default: 100;
+			--z-index-elevated: 200;
+			--z-index-floating: 300;
+		}
+
+
+		html {
+			font-size: 112.5%;
+			/*18px*/
+			scroll-behavior: smooth;
+		}
+
+		* {
+			box-sizing: border-box;
+		}
+
+		body {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+			background: white;
+			font-family: 'Nunito', sans-serif;
+			font-weight: 400;
+			line-height: 1.75;
+			color: var(--dpm-black);
+			background-color: var(--light-gray);
+		}
+
+		h1,
+		h2,
+		h3,
+		h4,
+		h5 {
+			@apply font-sans;
+			font-variation-settings: 'wght' 800;
+			margin: 3rem 0 1.38rem;
+			line-height: 1.3;
+		}
+
+		p {
+			margin-bottom: 1rem;
+			margin-inline: auto;
+			max-width: 80ch;
+		}
+
+		h1 {
+			margin-top: 0;
+			font-size: 2.488rem;
+		}
+
+		h2 {
+			font-size: 2.074rem;
+		}
+
+		h3 {
+			font-size: 1.728rem;
+		}
+
+		h4 {
+			font-size: 1.44rem;
+		}
+
+		h5 {
+			font-size: 1.2rem;
+		}
+}
