--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -82,7 +82,7 @@
 			max-width: 80ch;
 		}
 
-		h1 {
+/* 		h1 {
 			margin-top: 0;
 			font-size: 2.488rem;
 		}
@@ -97,9 +97,38 @@
 
 		h4 {
 			font-size: 1.44rem;
-		}
+		} */
 
 		h5 {
 			font-size: 1.2rem;
 		}
+
+						h1 {
+							margin-top: 0;
+							font-size: 4.209rem;
+						}
+
+						h2 {
+							font-size: 3.157rem;
+						}
+
+						h3 {
+							font-size: 2.369rem;
+						}
+
+						h4 {
+							font-size: 1.777rem;
+						}
+
+						h5 {
+							font-size: 1.333rem;
+						}
+}
+
+@layer components {
+
+	.hero-gradient {
+		background-image: linear-gradient(45deg, hsl(300 18% 4%), hsl(4 99% 37%));
+		background-image: linear-gradient(45deg, oklch(14% 0.01 326), oklch(50% 0.20 30));
+	}
 }
